[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breath-removal"
version = "0.1.0"
authors = [
    {name = "Lukasz Liniewicz", email = "l.liniewicz@gmail.com"},
]
description = "A tool for detecting and removing breath sounds from audio"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "torch>=2.5.1",
    "torchaudio>=2.5.1",
    "librosa>=0.10.2",
    "numpy<2.0",
    "intervaltree>=3.1.0",
    "matplotlib>=3.0.0",
    "soundfile>=0.12.1",
    "click>=8.1.7",
    "requests>=2.25.1",
    "tqdm>=4.65.0",
]

[project.urls]
"Homepage" = "https://github.com/lukaszliniewicz/breath-remove.git"
"Bug Tracker" = "https://github.com/lukaszliniewicz/breath-remove.git/issues"

[project.scripts]
breath-removal = "breath_removal.cli:main"

[tool.setuptools]
packages = ["breath_removal"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]