[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "breath-removal"
version = "0.1.0"
authors = [
    {name = "Lukasz Liniewicz", email = "l.liniewicz@gmail.com"},
]
description = "A tool for detecting and removing breath sounds from audio"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "antlr4-python3-runtime>=4.9.3",
    "certifi>=2024.8.30",
    "charset-normalizer>=3.4.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "filelock>=3.16.1",
    "fsspec>=2024.10.0",
    "huggingface-hub>=0.26.2",
    "idna>=3.10",
    "intervaltree>=3.1.0",
    "Jinja2>=3.1.4",
    "joblib>=1.4.2",
    "librosa>=0.10.2",
    "lightning>=2.4.0",
    "MarkupSafe>=3.0.2",
    "mpmath>=1.3.0",
    "networkx>=3.4.2",
    "numpy>=1.26.4,<2.0.0",
    "omegaconf>=2.3.0",
    "packaging>=23.2",
    "pandas>=2.2.3",
    "protobuf>=5.28.3",
    "python-dateutil>=2.9.0",
    "pytorch-lightning>=2.4.0",
    "pytz>=2024.2",
    "PyYAML>=6.0.2",
    "requests>=2.32.3",
    "scipy>=1.14.1",
    "six>=1.16.0",
    "sympy>=1.13.1",
    "torch>=2.0.0,<=2.2.0",
    "torchaudio>=2.0.0,<=2.2.0",
    "tqdm>=4.67.0",
    "typer>=0.13.0",
    "typing-extensions>=4.12.2",
    "tzdata>=2024.2",
    "urllib3>=2.2.3",
    "soundfile>=0.12.1",
    "matplotlib>=3.0.0",
]

[project.urls]
"Homepage" = "https://github.com/lukaszliniewicz/breath-removal.git"
"Bug Tracker" = "https://github.com/lukaszliniewicz/breath-removal.git/issues"

[project.scripts]
breath-removal = "breath_removal.cli:main"

[tool.setuptools]
packages = ["breath_removal"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
